--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Components\Camera.cs" />
     <Compile Include="Components\Input.cs" />
+    <Compile Include="Model\CellTypeDefinition.cs" />
     <Compile Include="Model\Game.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
