--- a/OctoAwesome/MapEditor/MapEditor.csproj
+++ b/OctoAwesome/MapEditor/MapEditor.csproj
@@ -60,6 +60,7 @@
     <Compile Include="RenderControl.Designer.cs">
       <DependentUpon>RenderControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="ToolType.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
