Realized Interaction with Box

--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Components\Camera.cs" />
     <Compile Include="Components\Input.cs" />
+    <Compile Include="Model\BoxItem.cs" />
     <Compile Include="Model\CellCache.cs" />
     <Compile Include="Model\CellTypeDefinition.cs" />
     <Compile Include="Model\Game.cs" />
@@ -57,6 +58,8 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\IHaveInventory.cs" />
+    <Compile Include="Model\InventoryItem.cs" />
     <Compile Include="Model\Item.cs" />
     <Compile Include="Model\TreeItem.cs" />
     <Compile Include="Model\Map.cs" />
@@ -108,6 +111,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\grass_center.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\box.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\sand_center.png">
