--- a/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
+++ b/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
@@ -9,11 +9,12 @@
     <ProjectGuid>{0FBACE48-1F20-45F6-84D1-9318ECB89E15}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OctoAwesomeDX</RootNamespace>
+    <RootNamespace>OctoAwesome</RootNamespace>
     <AssemblyName>OctoAwesomeDX</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -24,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -33,26 +35,19 @@
     <DefineConstants>TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Components\CameraComponent.cs" />
+    <Compile Include="Components\GamePadInput.cs" />
     <Compile Include="Components\InputComponent.cs" />
+    <Compile Include="Components\KeyBoardInput.cs" />
     <Compile Include="Components\RenderComponent.cs" />
     <Compile Include="Components\WorldComponent.cs" />
     <Compile Include="OctoGame.cs" />
-    <Compile Include="Model\BoxItem.cs" />
-    <Compile Include="Model\CellCache.cs" />
-    <Compile Include="Model\CellTypeDefinition.cs" />
-    <Compile Include="Model\Game.cs" />
-    <Compile Include="Model\IHaveInventory.cs" />
-    <Compile Include="Model\InventoryItem.cs" />
-    <Compile Include="Model\Item.cs" />
-    <Compile Include="Model\Map.cs" />
-    <Compile Include="Model\Player.cs" />
-    <Compile Include="Model\TreeItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rendering\CellTypeRenderer.cs" />
@@ -102,9 +97,16 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Assets\testMap.map">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OctoAwesome.Model\OctoAwesome.Model.csproj">
+      <Project>{34afaaa2-15cf-4261-8aad-e6eb3a94cbbf}</Project>
+      <Name>OctoAwesome.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
