--- a/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
+++ b/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Components\Camera3DComponent.cs" />
     <Compile Include="Components\CameraComponent.cs" />
+    <Compile Include="Components\EgoCameraComponent.cs" />
     <Compile Include="Components\GamePadInput.cs" />
     <Compile Include="Components\InputComponent.cs" />
     <Compile Include="Components\KeyBoardInput.cs" />
