--- a/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
+++ b/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
@@ -42,18 +42,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Components\Camera3DComponent.cs" />
-    <Compile Include="Components\CameraComponent.cs" />
     <Compile Include="Components\EgoCameraComponent.cs" />
     <Compile Include="Components\GamePadInput.cs" />
     <Compile Include="Components\InputComponent.cs" />
     <Compile Include="Components\KeyBoardInput.cs" />
     <Compile Include="Components\Render3DComponent.cs" />
-    <Compile Include="Components\RenderComponent.cs" />
     <Compile Include="Components\WorldComponent.cs" />
     <Compile Include="OctoGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rendering\CellTypeRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.4.0.456, Culture=neutral, processorArchitecture=MSIL">
@@ -65,37 +62,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Textures\box.png" />
-    <Content Include="Content\Textures\grass.png" />
-    <Content Include="Content\Textures\grass_center.png" />
-    <Content Include="Content\Textures\sand_center.png" />
-    <Content Include="Content\Textures\sand_left.png" />
-    <Content Include="Content\Textures\sand_lower.png" />
-    <Content Include="Content\Textures\sand_lowerLeft_concave.png" />
-    <Content Include="Content\Textures\sand_lowerLeft_convex.png" />
-    <Content Include="Content\Textures\sand_lowerRight_concave.png" />
-    <Content Include="Content\Textures\sand_lowerRight_convex.png" />
-    <Content Include="Content\Textures\sand_right.png" />
-    <Content Include="Content\Textures\sand_upper.png" />
-    <Content Include="Content\Textures\sand_upperLeft_concave.png" />
-    <Content Include="Content\Textures\sand_upperLeft_convex.png" />
-    <Content Include="Content\Textures\sand_upperRight_concave.png" />
-    <Content Include="Content\Textures\sand_upperRight_convex.png" />
-    <Content Include="Content\Textures\sprite.png" />
-    <Content Include="Content\Textures\tree.png" />
-    <Content Include="Content\Textures\water_center.png" />
-    <Content Include="Content\Textures\water_left.png" />
-    <Content Include="Content\Textures\water_lower.png" />
-    <Content Include="Content\Textures\water_lowerLeft_concave.png" />
-    <Content Include="Content\Textures\water_lowerLeft_convex.png" />
-    <Content Include="Content\Textures\water_lowerRight_concave.png" />
-    <Content Include="Content\Textures\water_lowerRight_convex.png" />
-    <Content Include="Content\Textures\water_right.png" />
-    <Content Include="Content\Textures\water_upper.png" />
-    <Content Include="Content\Textures\water_upperLeft_concave.png" />
-    <Content Include="Content\Textures\water_upperLeft_convex.png" />
-    <Content Include="Content\Textures\water_upperRight_concave.png" />
-    <Content Include="Content\Textures\water_upperRight_convex.png" />
     <Content Include="octoicon.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -105,15 +71,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Assets\testMap.map">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OctoAwesome.Model\OctoAwesome.Model.csproj">
       <Project>{34afaaa2-15cf-4261-8aad-e6eb3a94cbbf}</Project>
       <Name>OctoAwesome.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\Textures\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
