--- a/OctoAwesomeDX/OctoAwesome.Model/OctoAwesome.Model.csproj
+++ b/OctoAwesomeDX/OctoAwesome.Model/OctoAwesome.Model.csproj
@@ -54,7 +54,10 @@
     <Compile Include="Chunk.cs" />
     <Compile Include="Blocks\IBlock.cs" />
     <Compile Include="Coordinate.cs" />
+    <Compile Include="IChunk.cs" />
+    <Compile Include="IMapGenerator.cs" />
     <Compile Include="Index3.cs" />
+    <Compile Include="IPlanet.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
