--- a/OctoAwesomeDX/OctoAwesome.Model/OctoAwesome.Model.csproj
+++ b/OctoAwesomeDX/OctoAwesome.Model/OctoAwesome.Model.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Chunk.cs" />
     <Compile Include="Blocks\IBlock.cs" />
     <Compile Include="Coordinate.cs" />
+    <Compile Include="DebugChunk.cs" />
+    <Compile Include="DebugMapGenerator.cs" />
     <Compile Include="IChunk.cs" />
     <Compile Include="IMapGenerator.cs" />
     <Compile Include="Index3.cs" />
