--- a/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
+++ b/OctoAwesomeDX/OctoAwesomeDX/OctoAwesomeDX.csproj
@@ -41,6 +41,7 @@
     <ApplicationIcon>octoicon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BlockDefinitionManager.cs" />
     <Compile Include="Components\ChunkRenderer.cs" />
     <Compile Include="Components\EgoCameraComponent.cs" />
     <Compile Include="Components\GamePadInput.cs" />
