--- a/OctoAwesomeDX/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
+++ b/OctoAwesomeDX/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BlockDefinitionManager.cs" />
     <Compile Include="MapGeneratorManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateDomain.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
