--- a/OctoAwesome/OctoAwesome.Tests/OctoAwesome.Tests.csproj
+++ b/OctoAwesome/OctoAwesome.Tests/OctoAwesome.Tests.csproj
@@ -44,9 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssertEx.cs" />
     <Compile Include="BlockIntersectTests.cs" />
-    <Compile Include="Index2ConstructorTest.cs" />
-    <Compile Include="Index3ConstructorTest.cs" />
+    <Compile Include="CollisionTests.cs" />
+    <Compile Include="CoordinateTests.cs" />
+    <Compile Include="Index2Tests.cs" />
+    <Compile Include="Index3Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBlock.cs" />
   </ItemGroup>
