--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Noise\INoise.cs" />
     <Compile Include="Noise\PerlinNoiseGenerator.cs" />
     <Compile Include="Noise\SimplexNoiseGenerator.cs" />
+    <Compile Include="OrientationFlags.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="PlanetIndex3.cs" />
     <Compile Include="Player.cs" />
