--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Components\InputComponent.cs" />
     <Compile Include="Components\Input\KeyBoardInput.cs" />
     <Compile Include="Components\Input\MouseInput.cs" />
+    <Compile Include="Components\Input\MouseScreenInput.cs" />
     <Compile Include="Components\SceneComponent.cs" />
     <Compile Include="Components\PlayerComponent.cs" />
     <Compile Include="Components\SimulationComponent.cs" />
