--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Components\HudComponent.cs" />
     <Compile Include="Components\InputComponent.cs" />
     <Compile Include="Components\Input\KeyBoardInput.cs" />
+    <Compile Include="Components\Input\KeyboardScreenInput.cs" />
     <Compile Include="Components\Input\MouseInput.cs" />
     <Compile Include="Components\Input\MouseScreenInput.cs" />
     <Compile Include="Components\SceneComponent.cs" />
