--- a/OctoAwesome/OctoAwesome.Basics/OctoAwesome.Basics.csproj
+++ b/OctoAwesome/OctoAwesome.Basics/OctoAwesome.Basics.csproj
@@ -57,6 +57,10 @@
     <Compile Include="GrassBlockDefinition.cs" />
     <Compile Include="GroundBlock.cs" />
     <Compile Include="GroundBlockDefinition.cs" />
+    <Compile Include="IronOre.cs" />
+    <Compile Include="IronOreResource.cs" />
+    <Compile Include="Pickaxe.cs" />
+    <Compile Include="PickaxeDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
