--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -58,6 +58,7 @@
     <Compile Include="IClimateMap.cs" />
     <Compile Include="IInputSet.cs" />
     <Compile Include="IItem.cs" />
+    <Compile Include="IItemDefinition.cs" />
     <Compile Include="IMapGenerator.cs" />
     <Compile Include="Index2.cs" />
     <Compile Include="Index3.cs" />
