--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Block.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="Chunk.cs" />
+    <Compile Include="ChunkCache.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="IBlock.cs" />
     <Compile Include="IBlockDefinition.cs" />
