--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Index3.cs" />
     <Compile Include="InventorySlot.cs" />
     <Compile Include="IPlanet.cs" />
+    <Compile Include="IPlanetResourceManager.cs" />
     <Compile Include="IResource.cs" />
     <Compile Include="IResourceDefinition.cs" />
     <Compile Include="IScreenInputSet.cs" />
