--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -86,6 +86,9 @@
     <Content Include="Assets\OctoAwesome.Client\Crew\Christian.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\OctoAwesome.Client\Crew\Hugo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\OctoAwesome.Client\Crew\Nicol.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -111,8 +114,6 @@
     <Content Include="Assets\OctoAwesome.Client\Crew\bobstriker.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Copyright.txt" />
-    <Content Include="FEEDBACK.txt" />
     <Content Include="octoawesome.ico" />
   </ItemGroup>
   <ItemGroup>
