--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -59,20 +59,9 @@
     <Compile Include="Blocks.cs" />
     <Compile Include="Chunk.cs" />
     <Compile Include="ChunkColumn.cs" />
+    <Compile Include="CollisionPlane.cs" />
     <Compile Include="ContentHelper.cs" />
     <Compile Include="Coordinate.cs" />
-    <Compile Include="Entities\CollidableEntity.cs" />
-    <Compile Include="Entities\ControllableEntity.cs" />
-    <Compile Include="Entities\Dog.cs" />
-    <Compile Include="Entities\IBody.cs" />
-    <Compile Include="Entities\ICollidable.cs" />
-    <Compile Include="Entities\IControllable.cs" />
-    <Compile Include="Entities\IMoving.cs" />
-    <Compile Include="Entities\IPosition.cs" />
-    <Compile Include="Entities\IRotatable.cs" />
-    <Compile Include="Entities\MovingEntity.cs" />
-    <Compile Include="Entities\PermanentEntity.cs" />
-    <Compile Include="EntityCache.cs" />
     <Compile Include="GlobalChunkCache.cs" />
     <Compile Include="IBlockDefinition.cs" />
     <Compile Include="IChunk.cs" />
@@ -93,7 +82,7 @@
     <Compile Include="IResource.cs" />
     <Compile Include="IResourceDefinition.cs" />
     <Compile Include="IResourceManager.cs" />
-    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entity.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="IUniverse.cs" />
     <Compile Include="LocalBuilder.cs" />
@@ -102,7 +91,6 @@
     <Compile Include="OrientationFlags.cs" />
     <Compile Include="PhysicalProperties.cs" />
     <Compile Include="Planet.cs" />
-    <Compile Include="PlanetIndex2.cs" />
     <Compile Include="PlanetIndex3.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
