Worked on Network

--- a/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
+++ b/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="ConnectedClient.cs" />
     <Compile Include="NetworkPersistenceManager.cs" />
+    <Compile Include="NetworkUpdateManager.cs" />
     <Compile Include="OctoNetworkStream.cs" />
     <Compile Include="OfficialCommands.cs" />
     <Compile Include="Package.cs" />
